Completed content box with technologies coworkers and recent projects

--- a/index.html
+++ b/index.html
@@ -13,50 +13,50 @@
     <div class="main-container">
         <div class="side-bar">
             <div class="title">
-                <img src="./images/dashboard.svg" alt="dashboard vector">
+                <img class="svg" src="./images/dashboard.svg" alt="dashboard vector">
                 <h1>Dashboard</h1>
             </div>
             <div class="options-container">
                 <div class="options">
                     <div class="side-bar-option">
                         <a href="">
-                            <img src="./images/home.svg" alt="">
+                            <img class="svg" src="./images/home.svg" alt="">
                             <h5>Home</h5>
                         </a>
                     </div>
                     <div class="side-bar-option profile active">
                         <a href="">
-                            <img src="./images/profile.svg" alt="">
+                            <img class="svg" src="./images/profile.svg" alt="">
                             <h5>Profile</h5>
                         </a>
                     </div>
                     <div class="side-bar-option">
                         <a href="">
-                            <img src="./images/tasks.svg" alt="">
+                            <img class="svg" src="./images/tasks.svg" alt="">
                             <h5>Tasks</h5>
                         </a>
                     </div>
                     <div class="side-bar-option">
                         <a href="">
-                            <img src="./images/communities.svg" alt="">
+                            <img class="svg" src="./images/communities.svg" alt="">
                             <h5>Communities</h5>
                         </a>
                     </div>
                     <div class="side-bar-option">
                         <a href="">
-                            <img src="./images/support.svg" alt="">
+                            <img class="svg" src="./images/support.svg" alt="">
                             <h5>Support</h5>
                         </a>
                     </div>
                     <div class="side-bar-option">
                         <a href="">
-                            <img src="./images/reports.svg" alt="">
+                            <img class="svg" src="./images/reports.svg" alt="">
                             <h5>Reports</h5>
                         </a>
                     </div>
                     <div class="side-bar-option log-out">
                         <a href="">
-                            <img src="./images/log-out.svg" alt="">
+                            <img class="svg" src="./images/log-out.svg" alt="">
                             <h5>Log Out</h5>
                         </a>
                     </div>
@@ -64,7 +64,82 @@
             </div>
         </div>
         <div class="content">
-
+            <div class="technologies">
+                <h3>Technologies</h3>
+                <div class="technologies-card-container">
+                    <div class="card">
+                        <img class="html-logo" src="./images/logo-html5.svg" alt="HTML logo">
+                        <div class="technology-usage">
+                            <h5>Total Usage:</h5>
+                            <h3>27.75 %</h3>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="css-logo" src="./images/logo-css3.svg" alt="Css logo">
+                        <div class="technology-usage">
+                            <h5>Total Usage:</h5>
+                            <h3>29.58 %</h3>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="js-logo" src="./images/logo-javascript.svg" alt="Js logo">
+                        <div class="technology-usage">
+                            <h5>Total Usage:</h5>
+                            <h3>42.68 %</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="co-workers">
+                <h3>Co-Workers</h3>
+                <div class="co-workers-container">
+                    <div class="co-worker">
+                        <img src="./images/odinPlogo.png" alt="">
+                        <p>Odin Project</p>
+                    </div>
+                    <div class="co-worker">
+                        <img src="./images/morganOakley.png" alt="">
+                        <p>Morgan Oakley</p>
+                    </div>
+                    <div class="co-worker">
+                        <img src="./images/jackSparrowPfp.jpeg" alt="">
+                        <p>Jack Sparrow</p>
+                    </div>
+                    <div class="co-worker">
+                        <img class="svg" src="./images/add-outline.svg" alt="">
+                        <p>Add User</p>
+                    </div>
+                </div>
+            </div>
+            <div class="recent-projects">
+                <h3>Recent Projects</h3>
+                <div class="recent-project-container">
+                    <div class="projects">
+                        <h5>Name</h5>
+                        <h5>HTML</h5>
+                        <h5>CSS</h5>
+                        <h5>Js</h5>
+                        <h5></h5>
+                        
+                        <h6>Sign Up Form</h6>
+                        <h6>45.3 %</h6>
+                        <h6>32.3 %</h6>
+                        <h6>22.4 %</h6>
+                        <a href="https://raulurdanetag.github.io/Sign-up-Form/">View <img src="./images/eye-outline.svg" alt=""></a>
+                        <h6>Calculator App</h6>
+                        <h6>26.4 %</h6>
+                        <h6>30.4 %</h6>
+                        <h6>43.2 %</h6>
+                        <a href="https://raulurdanetag.github.io/calculator-app/">View <img src="./images/eye-outline.svg" alt=""></a>
+                        <h6>Etch-a-Sketch</h6>
+                        <h6>18.1 %</h6>
+                        <h6>34.2 %</h6>
+                        <h6>47.7 %</h6>
+                        <a href="https://raulurdanetag.github.io/etch-a-sketch/">View <img src="./images/eye-outline.svg" alt=""></a>
+                    </div>
+                </div>
+                <h4>Show All</h4>
+            </div>
         </div>
         <div class="user-bar">
 
