Changed font weight for h5 recent projects

--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
                         <h6>45.3 %</h6>
                         <h6>32.3 %</h6>
                         <h6>22.4 %</h6>
-                        <a href="https://raulurdanetag.github.io/Sign-up-Form/">View <img src="./images/eye-outline.svg" alt=""></a>
+                        <a href="https://raulurdanetag.github.io/Sign-up-Form/" target="_blank">View <img src="./images/eye-outline.svg" alt=""></a>
                         <h6>Calculator App</h6>
                         <h6>26.4 %</h6>
                         <h6>30.4 %</h6>
                         <h6>43.2 %</h6>
-                        <a href="https://raulurdanetag.github.io/calculator-app/">View <img src="./images/eye-outline.svg" alt=""></a>
+                        <a href="https://raulurdanetag.github.io/calculator-app/" target="_blank">View <img src="./images/eye-outline.svg" alt=""></a>
                         <h6>Etch-a-Sketch</h6>
                         <h6>18.1 %</h6>
                         <h6>34.2 %</h6>
                         <h6>47.7 %</h6>
-                        <a href="https://raulurdanetag.github.io/etch-a-sketch/">View <img src="./images/eye-outline.svg" alt=""></a>
+                        <a href="https://raulurdanetag.github.io/etch-a-sketch/" target="_blank">View <img src="./images/eye-outline.svg" alt=""></a>
                     </div>
                 </div>
                 <h4>Show All</h4>
