Made user bar, and made the page responsive

--- a/index.html
+++ b/index.html
@@ -115,34 +115,112 @@
                 <h3>Recent Projects</h3>
                 <div class="recent-project-container">
                     <div class="projects">
-                        <h5>Name</h5>
-                        <h5>HTML</h5>
-                        <h5>CSS</h5>
-                        <h5>Js</h5>
+                        <h5 class="project-name">Name</h5>
+                        <h5 class="percentage">HTML</h5>
+                        <h5 class="percentage">CSS</h5>
+                        <h5 class="percentage">Js</h5>
                         <h5></h5>
-                        
-                        <h6>Sign Up Form</h6>
-                        <h6>45.3 %</h6>
-                        <h6>32.3 %</h6>
-                        <h6>22.4 %</h6>
-                        <a href="https://raulurdanetag.github.io/Sign-up-Form/" target="_blank">View <img src="./images/eye-outline.svg" alt=""></a>
-                        <h6>Calculator App</h6>
-                        <h6>26.4 %</h6>
-                        <h6>30.4 %</h6>
-                        <h6>43.2 %</h6>
-                        <a href="https://raulurdanetag.github.io/calculator-app/" target="_blank">View <img src="./images/eye-outline.svg" alt=""></a>
-                        <h6>Etch-a-Sketch</h6>
-                        <h6>18.1 %</h6>
-                        <h6>34.2 %</h6>
-                        <h6>47.7 %</h6>
-                        <a href="https://raulurdanetag.github.io/etch-a-sketch/" target="_blank">View <img src="./images/eye-outline.svg" alt=""></a>
+
+                        <h6 class="project-name">Sign Up Form</h6>
+                        <h6 class="percentage">45.3 %</h6>
+                        <h6 class="percentage">32.3 %</h6>
+                        <h6 class="percentage">22.4 %</h6>
+                        <a href="https://raulurdanetag.github.io/Sign-up-Form/" target="_blank">View <img
+                                src="./images/eye-outline.svg" alt=""></a>
+                        <h6 class="project-name">Calculator App</h6>
+                        <h6 class="percentage">26.4 %</h6>
+                        <h6 class="percentage">30.4 %</h6>
+                        <h6 class="percentage">43.2 %</h6>
+                        <a href="https://raulurdanetag.github.io/calculator-app/" target="_blank">View <img
+                                src="./images/eye-outline.svg" alt=""></a>
+                        <h6 class="project-name">Etch-a-Sketch</h6>
+                        <h6 class="percentage">18.1 %</h6>
+                        <h6 class="percentage">34.2 %</h6>
+                        <h6 class="percentage">47.7 %</h6>
+                        <a href="https://raulurdanetag.github.io/etch-a-sketch/" target="_blank">View <img
+                                src="./images/eye-outline.svg" alt=""></a>
                     </div>
                 </div>
                 <h4>Show All</h4>
             </div>
         </div>
         <div class="user-bar">
-
+            <div class="user-profile">
+                <div class="user-settings">
+                    <div class="svg-container"><img src="./images/messages.svg" alt=""></div>
+                    <div class="svg-container"><img src="./images/settings.svg" alt=""></div>
+                </div>
+                <div>
+                    <div class="name">
+                        <h6>Hey, <i>Mark</i></h6>
+                        <p>admin</p>
+                    </div>
+                    <img class="pfp" src="./images/foto.jpg" alt="">
+                </div>
+            </div>
+            <div class="trending">
+                <h3>Trending</h3>
+                <div class="trending-container">
+                    <div class="user">
+                        <img src="./images/tegan-pfp.jpg" alt="">
+                        <div class="user-id">
+                            <h4>@tegan</h4>
+                            <h5><i>World Peace Builder</i></h5>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="./images/morgan-pfp.jpg" alt="">
+                        <div class="user-id">
+                            <h4>@morgan</h4>
+                            <h5><i>Super Cool Project</i></h5>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="./images/kendall-pfp.jpeg" alt="">
+                        <div class="user-id">
+                            <h4>@kendall</h4>
+                            <h5><i>Life Changing App</i></h5>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="./images/alex-pfp.jpg" alt="">
+                        <div class="user-id">
+                            <h4>@alex</h4>
+                            <h5><i>No Traffic Maker</i></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="to-do">
+                <div class="to-do-title">
+                    <h3>To Do</h3>
+                    <div class="to-do-noti"><img src="./images/notifications-outline.svg" alt=""></div>
+                </div>
+                <div class="to-do-container">
+                    <div class="to-do-info">
+                        <img src="./images/bug.svg" alt="">
+                        <div>
+                            <h4>Fix Bug</h4>
+                            <h6>Due Date: 04-AUG </h6>
+                        </div>
+                        <img src="./images/ellipsis-vertical.svg" alt="">
+                    </div>
+                </div>
+                <div class="to-do-container">
+                    <div class="to-do-info">
+                        <img src="./images/arrow-up.svg" alt="">
+                        <div>
+                            <h4>Push Changes</h4>
+                            <h6>Due Date: 11-AUG </h6>
+                        </div>
+                        <img src="./images/ellipsis-vertical.svg" alt="">
+                    </div>
+                </div>
+                <div class="to-do-container-add">
+                    <img src="./images/add-outline.svg" alt="">
+                    <h3>Add Task</h3>
+                </div>
+            </div>
         </div>
     </div>
 </body>
